## version 2 or later (see file COPYING for details)
##

pyFormex 0.7.2  Releasenotes 
============================

This is a collection of the most prominent changes in pyFormex 0.7.2
compared to the previous release 0.7.1


Installation
------------
Installation now also works with Python 2.5 (previously only 2.4).
This has been tested on Debian(Lenny) and Ubuntu.


Command line
------------


Core
----

- globaldata.py has been removed. The global data are now in the __init__.py
  and are initilized when module pyformex is imported

- Coords:
  
  . scale() now supports a single scale value and axis numbers
  . map1 now supports mixing axes, e.g. y = func(x)
  . superSpherical() is a new and powerful transformation
  . projectOnCylinder() does what it says
  . split() splits up a Coords array

- Formex:
  
  . added superSpherical transformation
  . accept a single point as Formex initialisation data
  . acccept one-dimensional coordinate data as Formex initialisation

- simple.py
  
  . rectangle has an optional 'diag' argument to create triangles
  . rectangle has an optional 'bias' argument to create skewed rectangles

  

Gui
---

- Many optimizations in the picking functions
- Input Dialogs now have customizable action buttons
- Help/Detected Software now displays correct Revision number
- File/Create New Script loads a script template into the editor

- widgets.py

  . added Slider widgets
  . textbox() function
  . InputDialog.getResults() returns a single value: a dictionary with the
    values in the dialog if accepted, an empty dictionary if rejected.
  . The timeout of the InputDialog.getResults() function can result in
    either an accept or a reject signal.
  . The accept and timeout status of an InputDialog can be consulted after
    the widget was closed.

- ScriptsMenu:

  . The scripts loading procedure in the ScriptsMenu widget has been changed
    to account for future enhancements, but is largely compatible with the old
    use in the GUI:
