@@ -15,7 +15,7 @@ Currently, this does nothing. The file should be kept though, because it is
 needed to flag this directory as a Python package.
 """
 
-__version__ = "0.7.2-a3"
+__version__ = "0.7.2-a4"
 __revision__ = "$Rev$"
 Version = 'pyFormex %s' % __version__
 Copyright = 'Copyright (C) 2004-2007 Benedict Verhegghe'
