@@ -41,7 +41,7 @@
 
 % pyFormex version
 \renewcommand{\releasename}{pyFormex}
-\release{0.7.2-a3}
+\release{0.7.2-a4}
 \setshortversion{0.7.2}
 \newcommand{\pyfversion}{pyFormex \version}
 %% In the text use \version to refer to the version string only,
