@@ -26,7 +26,8 @@ workdir="."
 icondir = os.path.join(pyformexdir,'icons')
 examplesdir = os.path.join(pyformexdir,'examples')
 # scriptdirs is a list of (title,dir) tuples
-scriptdirs = [ ('Examples',examplesdir) ]
+# for 'examples', the directory will be filled in automagically
+scriptdirs = [ ('examples','') ]
 #imagesfromeps = True
 history = []
 # extra paths to append tot sys.path
