@@ -26,6 +26,13 @@ Command line
 ------------
 
 
+Configuration
+-------------
+
+- A default user configuration file is created if it is missing.
+- The 'scriptdirs' configuration item is no longer overwritten.
+
+
 Core
 ----
 
@@ -64,6 +71,7 @@ Gui
 - widgets.py
 
   . added Slider widgets
+  . added Table widgets
   . textbox() function
   . InputDialog.getResults() returns a single value: a dictionary with the
     values in the dialog if accepted, an empty dictionary if rejected.
